--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <a href="посилання на сайт">
+  <img src="шлях до лого" alt="WebStudio" width="115" height="24"/>
+<nav>
+  <ul>
+    <li><a href="link на сторінку про студію">Studio</a></li>
+    <li><a href="link на сторінку Portfolio">Portfolio</a></li>
+    <li><a href="link на сторінку Contacts"></a>Contacts</li>
+  </ul>
+</nav>
+  
+  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+  <a href="tel:+110001111111">11 (000) 111-11-11</a>
+    </header>
     <main></main>
-    <footer></footer>
+    <footer>
+      <a href="посилання на сайт">
+  <img src="шлях до лого" alt="WebStudio" width="115" height="24"/>
+    </footer>
   </body>
 </html>
