--- a/index.html
+++ b/index.html
@@ -7,66 +7,111 @@
   </head>
   <body>
     <header>
-      <a href="посилання на сайт">
-  <img src="шлях до лого" alt="WebStudio" width="115" height="24"/>
-<nav>
-  <ul>
-    <li><a href="link на сторінку про студію">Studio</a></li>
-    <li><a href="link на сторінку Portfolio">Portfolio</a></li>
-    <li><a href="link на сторінку Contacts">Contacts</a></li>
-  </ul>
-</nav>
-  
-  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-  <a href="tel:+110001111111">11 (000) 111-11-11</a>
+      <a href="./index.html">WebStudio</a>
+      <nav>
+        <ul>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
-      <h1>Effective Solutions <br> 
-for Your Business</h1>
-<button>Order Service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
-        <h3>Strategy</h3>
-        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-        <h3>Punctuality</h3>
-        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-        <h3>Diligence</h3>
-        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk</p>
-        <h3>Technologies</h3>
-        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
-<h2>Our Team</h2>
-<ul>
-  <li>
-    <img src="" alt="Product Designer">
-    <h3>Mark Guerrero</h3>
-    <p>Product Designer</p>
-  </li>
-  <li>
-    <img src="" alt="Frontend Developer">
-    <h3>Tom Ford</h3>
-    <p>Frontend Developer</p>
-  </li>
-  <li>
-    <img src="" alt="Marketing">
-    <h3>Camila Garcia</h3>
-    <p>Marketing</p>
-  </li>
-  <li>
-    <img src="" alt="UI Designer">
-    <h3>Daniel Wilson</h3>
-    <p>UI Designer</p>
-  </li>
-</ul>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/mark-guerrero.jpg"
+              alt="mark-guerrero"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/tom-ford.jpg"
+              alt="tom-ford"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/camila-garcia.jpg"
+              alt="camila-garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/daniel-wilson.jpg"
+              alt="daniel-wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
 
     <footer>
-    
-<a href="">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <a href="">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
