--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./index.html"></a></li>
+          <li><a href="./index.html">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -28,6 +28,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Benefits</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
