--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
-          <li><a href="./index.html"></a></li>
+          <li><a href="./index.html">Portfolio</a></li>
           <li><a href="./index.html">Contacts</a></li>
         </ul>
       </nav>
@@ -48,7 +48,7 @@
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
