--- a/index.html
+++ b/index.html
@@ -53,90 +53,162 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Benefits</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="benefits">
+        <h2 class="benefits-title">Benefits</h2>
+        <ul class="benefits-list">
+          <li class="benefits-list-item">
+            <h3 class="benefits-item-title">Strategy</h3>
+            <p class="benefits-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="benefits-list-item">
+            <h3 class="benefits-item-title">Punctuality</h3>
+            <p class="benefits-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="benefits-list-item">
+            <h3 class="benefits-item-title">Diligence</h3>
+            <p class="benefits-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="benefits-list-item">
+            <h3 class="benefits-item-title">Technologies</h3>
+            <p class="benefits-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-list-item">
             <img
+              class="team-img"
               src="./images/mark-guerrero.jpg"
               alt="mark-guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name-title">Mark Guerrero</h3>
+            <p class="team-name-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-img"
               src="./images/tom-ford.jpg"
               alt="tom-ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name-title">Tom Ford</h3>
+            <p class="team-name-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-img"
               src="./images/camila-garcia.jpg"
               alt="camila-garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name-title">Camila Garcia</h3>
+            <p class="team-name-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-img"
               src="./images/daniel-wilson.jpg"
               alt="daniel-wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name-title">Daniel Wilson</h3>
+            <p class="team-name-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/Portfolio/banking-app.jpg"
+              alt="banking-app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name-title">Banking App</h3>
+            <p class="portfolio-name-text">App</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/Portfolio/cashless-payment.jpg"
+              alt="cashless-payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name-title">Cashless Payment</h3>
+            <p class="portfolio-name-text">Marketing</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/Portfolio/meditation-app.jpg"
+              alt="meditation-app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name-title">Meditation App</h3>
+            <p class="portfolio-name-text">App</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/Portfolio/taxi-service.jpg"
+              alt="taxi-service"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name-title">Taxi Service</h3>
+            <p class="portfolio-name-text">Marketing</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/Portfolio/screen-illustr.jpg"
+              alt="screen-illustr"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name-title">Screen Illustrations</h3>
+            <p class="portfolio-name-text">Design</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/Portfolio/online-courses.jpg"
+              alt="online-courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name-title">Online Courses</h3>
+            <p class="portfolio-name-text">Marketing</p>
+          </li>
+        </ul>
       </section>
     </main>
 
