--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       <address class="contacts">
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a class="contacts-link" ="mailto:info@devstudio.com"
+            <a class="contacts-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" ="tel:+110001111111"
+            <a class="contacts-link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
