--- a/index.html
+++ b/index.html
@@ -21,205 +21,237 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="header-nav">
-        <a class="logo header-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <section class="benefits">
-        <h2 class="benefits-title">Benefits</h2>
-        <ul class="benefits-list">
-          <li class="benefits-list-item">
-            <h3 class="benefits-item-title">Strategy</h3>
-            <p class="benefits-item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="benefits-list-item">
-            <h3 class="benefits-item-title">Punctuality</h3>
-            <p class="benefits-item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="benefits-list-item">
-            <h3 class="benefits-item-title">Diligence</h3>
-            <p class="benefits-item-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="benefits-list-item">
-            <h3 class="benefits-item-title">Technologies</h3>
-            <p class="benefits-item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container benefits-container">
+          <h2 class="benefits-title">Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-list-item">
+              <h3 class="benefits-item-title">Strategy</h3>
+              <p class="benefits-item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-list-item">
+              <h3 class="benefits-item-title">Punctuality</h3>
+              <p class="benefits-item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-list-item">
+              <h3 class="benefits-item-title">Diligence</h3>
+              <p class="benefits-item-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-list-item">
+              <h3 class="benefits-item-title">Technologies</h3>
+              <p class="benefits-item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-list-item">
-            <img
-              class="team-img"
-              src="./images/mark-guerrero.jpg"
-              alt="mark-guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name-title">Mark Guerrero</h3>
-            <p class="team-name-text">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-img"
-              src="./images/tom-ford.jpg"
-              alt="tom-ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name-title">Tom Ford</h3>
-            <p class="team-name-text">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-img"
-              src="./images/camila-garcia.jpg"
-              alt="camila-garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name-title">Camila Garcia</h3>
-            <p class="team-name-text">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-img"
-              src="./images/daniel-wilson.jpg"
-              alt="daniel-wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name-title">Daniel Wilson</h3>
-            <p class="team-name-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img
+                class="team-img"
+                src="./images/mark-guerrero.jpg"
+                alt="mark-guerrero"
+                width="264"
+                height="260"
+              />
+              <div>
+                <h3 class="team-name-title">Mark Guerrero</h3>
+                <p class="team-name-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-img"
+                src="./images/tom-ford.jpg"
+                alt="tom-ford"
+                width="264"
+                height="260"
+              />
+              <div>
+                <h3 class="team-name-title">Tom Ford</h3>
+                <p class="team-name-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-img"
+                src="./images/camila-garcia.jpg"
+                alt="camila-garcia"
+                width="264"
+                height="260"
+              />
+              <div>
+                <h3 class="team-name-title">Camila Garcia</h3>
+                <p class="team-name-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-img"
+                src="./images/daniel-wilson.jpg"
+                alt="daniel-wilson"
+                width="264"
+                height="260"
+              />
+              <div>
+                <h3 class="team-name-title">Daniel Wilson</h3>
+                <p class="team-name-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/Portfolio/banking-app.jpg"
-              alt="banking-app"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name-title">Banking App</h3>
-            <p class="portfolio-name-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/Portfolio/cashless-payment.jpg"
-              alt="cashless-payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name-title">Cashless Payment</h3>
-            <p class="portfolio-name-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/Portfolio/meditation-app.jpg"
-              alt="meditation-app"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name-title">Meditation App</h3>
-            <p class="portfolio-name-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/Portfolio/taxi-service.jpg"
-              alt="taxi-service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name-title">Taxi Service</h3>
-            <p class="portfolio-name-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/Portfolio/screen-illustr.jpg"
-              alt="screen-illustr"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name-title">Screen Illustrations</h3>
-            <p class="portfolio-name-text">Design</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/Portfolio/online-courses.jpg"
-              alt="online-courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name-title">Online Courses</h3>
-            <p class="portfolio-name-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container portfolio-container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/Portfolio/banking-app.jpg"
+                alt="banking-app"
+                width="360"
+                height="300"
+              />
+              <div>
+                <h3 class="portfolio-name-title">Banking App</h3>
+                <p class="portfolio-name-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/Portfolio/cashless-payment.jpg"
+                alt="cashless-payment"
+                width="360"
+                height="300"
+              />
+              <div>
+                <h3 class="portfolio-name-title">Cashless Payment</h3>
+                <p class="portfolio-name-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/Portfolio/meditation-app.jpg"
+                alt="meditation-app"
+                width="360"
+                height="300"
+              />
+              <div>
+                <h3 class="portfolio-name-title">Meditation App</h3>
+                <p class="portfolio-name-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/Portfolio/taxi-service.jpg"
+                alt="taxi-service"
+                width="360"
+                height="300"
+              />
+              <div>
+                <h3 class="portfolio-name-title">Taxi Service</h3>
+                <p class="portfolio-name-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/Portfolio/screen-illustr.jpg"
+                alt="screen-illustr"
+                width="360"
+                height="300"
+              />
+              <div>
+                <h3 class="portfolio-name-title">Screen Illustrations</h3>
+                <p class="portfolio-name-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/Portfolio/online-courses.jpg"
+                alt="online-courses"
+                width="360"
+                height="300"
+              />
+              <div>
+                <h3 class="portfolio-name-title">Online Courses</h3>
+                <p class="portfolio-name-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="page-footer">
-      <a class="logo footer-logo" href="./index.html"
-        >Web<span class="logo-part">Studio</span></a
-      >
-      <p class="page-footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <p class="page-footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
