delete errors in CSS

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="team-card">
                 <h3 class="team-name-title">Mark Guerrero</h3>
                 <p class="team-name-text">Product Designer</p>
               </div>
@@ -121,7 +121,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="team-card">
                 <h3 class="team-name-title">Tom Ford</h3>
                 <p class="team-name-text">Frontend Developer</p>
               </div>
@@ -134,7 +134,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="team-card">
                 <h3 class="team-name-title">Camila Garcia</h3>
                 <p class="team-name-text">Marketing</p>
               </div>
@@ -147,7 +147,7 @@
                 width="264"
                 height="260"
               />
-              <div>
+              <div class="team-card">
                 <h3 class="team-name-title">Daniel Wilson</h3>
                 <p class="team-name-text">UI Designer</p>
               </div>
@@ -167,7 +167,7 @@
                 width="360"
                 height="300"
               />
-              <div>
+              <div class="project-card">
                 <h3 class="portfolio-name-title">Banking App</h3>
                 <p class="portfolio-name-text">App</p>
               </div>
@@ -180,7 +180,7 @@
                 width="360"
                 height="300"
               />
-              <div>
+              <div class="project-card">
                 <h3 class="portfolio-name-title">Cashless Payment</h3>
                 <p class="portfolio-name-text">Marketing</p>
               </div>
@@ -193,7 +193,7 @@
                 width="360"
                 height="300"
               />
-              <div>
+              <div class="project-card">
                 <h3 class="portfolio-name-title">Meditation App</h3>
                 <p class="portfolio-name-text">App</p>
               </div>
@@ -206,7 +206,7 @@
                 width="360"
                 height="300"
               />
-              <div>
+              <div class="project-card">
                 <h3 class="portfolio-name-title">Taxi Service</h3>
                 <p class="portfolio-name-text">Marketing</p>
               </div>
@@ -219,7 +219,7 @@
                 width="360"
                 height="300"
               />
-              <div>
+              <div class="project-card">
                 <h3 class="portfolio-name-title">Screen Illustrations</h3>
                 <p class="portfolio-name-text">Design</p>
               </div>
@@ -232,7 +232,7 @@
                 width="360"
                 height="300"
               />
-              <div>
+              <div class="project-card">
                 <h3 class="portfolio-name-title">Online Courses</h3>
                 <p class="portfolio-name-text">Marketing</p>
               </div>
