--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </section>
       <section class="benefits">
         <div class="container benefits-container">
-          <h2 class="benefits-title">Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
               <h3 class="benefits-item-title">Strategy</h3>
