--- a/index.html
+++ b/index.html
@@ -160,78 +160,120 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/Portfolio/banking-app.jpg"
-                alt="banking-app"
-                width="360"
-                height="300"
-              />
+              <div class="thumb">
+                <img
+                  class="portfolio-img"
+                  src="./images/Portfolio/banking-app.jpg"
+                  alt="banking-app"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overflow">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="project-card">
                 <h3 class="portfolio-name-title">Banking App</h3>
                 <p class="portfolio-name-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/Portfolio/cashless-payment.jpg"
-                alt="cashless-payment"
-                width="360"
-                height="300"
-              />
+              <div class="thumb">
+                <img
+                  class="portfolio-img"
+                  src="./images/Portfolio/cashless-payment.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overflow">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="project-card">
                 <h3 class="portfolio-name-title">Cashless Payment</h3>
                 <p class="portfolio-name-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/Portfolio/meditation-app.jpg"
-                alt="meditation-app"
-                width="360"
-                height="300"
-              />
+              <div class="thumb">
+                <img
+                  class="portfolio-img"
+                  src="./images/Portfolio/meditation-app.jpg"
+                  alt="meditation-app"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overflow">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="project-card">
                 <h3 class="portfolio-name-title">Meditation App</h3>
                 <p class="portfolio-name-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/Portfolio/taxi-service.jpg"
-                alt="taxi-service"
-                width="360"
-                height="300"
-              />
+              <div class="thumb">
+                <img
+                  class="portfolio-img"
+                  src="./images/Portfolio/taxi-service.jpg"
+                  alt="taxi-service"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overflow">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="project-card">
                 <h3 class="portfolio-name-title">Taxi Service</h3>
                 <p class="portfolio-name-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/Portfolio/screen-illustr.jpg"
-                alt="screen-illustr"
-                width="360"
-                height="300"
-              />
+              <div class="thumb">
+                <img
+                  class="portfolio-img"
+                  src="./images/Portfolio/screen-illustr.jpg"
+                  alt="screen-illustr"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overflow">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="project-card">
                 <h3 class="portfolio-name-title">Screen Illustrations</h3>
                 <p class="portfolio-name-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/Portfolio/online-courses.jpg"
-                alt="online-courses"
-                width="360"
-                height="300"
-              />
+              <div class="thumb">
+                <img
+                  class="portfolio-img"
+                  src="./images/Portfolio/online-courses.jpg"
+                  alt="online-courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overflow">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="project-card">
                 <h3 class="portfolio-name-title">Online Courses</h3>
                 <p class="portfolio-name-text">Marketing</p>
