add social list icons in our team

--- a/index.html
+++ b/index.html
@@ -112,6 +112,33 @@
                 <h3 class="team-name-title">Mark Guerrero</h3>
                 <p class="team-name-text">Product Designer</p>
               </div>
+
+              <ul class="social-list">
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.instagram.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://twitter.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.facebook.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.linkedin.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -125,6 +152,32 @@
                 <h3 class="team-name-title">Tom Ford</h3>
                 <p class="team-name-text">Frontend Developer</p>
               </div>
+              <ul class="social-list">
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.instagram.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://twitter.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.facebook.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.linkedin.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -138,6 +191,32 @@
                 <h3 class="team-name-title">Camila Garcia</h3>
                 <p class="team-name-text">Marketing</p>
               </div>
+              <ul class="social-list">
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.instagram.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://twitter.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.facebook.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.linkedin.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -151,6 +230,32 @@
                 <h3 class="team-name-title">Daniel Wilson</h3>
                 <p class="team-name-text">UI Designer</p>
               </div>
+              <ul class="social-list">
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.instagram.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://twitter.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.facebook.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="social-list-item">
+                  <a class="social-link" href="https://www.linkedin.com/"
+                    ><svg class="link-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
