--- a/index.html
+++ b/index.html
@@ -390,14 +390,45 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container footer-container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="page-footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-container">
+        <div class="logo-container">
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="page-footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-container">
+          <p class="social-text">Social media</p>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <a class="footer-social-link" href="https://www.instagram.com/"
+                ><svg class="link-svg" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="social-list-item">
+              <a class="footer-social-link" href="https://twitter.com/"
+                ><svg class="link-svg" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="social-list-item">
+              <a class="footer-social-link" href="https://www.facebook.com/"
+                ><svg class="link-svg" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-list-item">
+              <a class="footer-social-link" href="https://www.linkedin.com/"
+                ><svg class="link-svg" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
