fix team section errors

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           </ul>
         </div>
       </section>
+      <!-- #region our team -->
       <section class="team">
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
@@ -111,34 +112,35 @@
               <div class="team-card">
                 <h3 class="team-name-title">Mark Guerrero</h3>
                 <p class="team-name-text">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.instagram.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://twitter.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.facebook.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.linkedin.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
-
-              <ul class="social-list">
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.instagram.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://twitter.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.facebook.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.linkedin.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use></svg
-                  ></a>
-                </li>
-              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -151,33 +153,35 @@
               <div class="team-card">
                 <h3 class="team-name-title">Tom Ford</h3>
                 <p class="team-name-text">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.instagram.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://twitter.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.facebook.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.linkedin.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
-              <ul class="social-list">
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.instagram.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://twitter.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.facebook.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.linkedin.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use></svg
-                  ></a>
-                </li>
-              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -190,33 +194,35 @@
               <div class="team-card">
                 <h3 class="team-name-title">Camila Garcia</h3>
                 <p class="team-name-text">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.instagram.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://twitter.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.facebook.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.linkedin.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
-              <ul class="social-list">
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.instagram.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://twitter.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.facebook.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.linkedin.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use></svg
-                  ></a>
-                </li>
-              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -229,37 +235,42 @@
               <div class="team-card">
                 <h3 class="team-name-title">Daniel Wilson</h3>
                 <p class="team-name-text">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.instagram.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://twitter.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.facebook.com/">
+                      <svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-link" href="https://www.linkedin.com/"
+                      ><svg class="link-svg" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
-              <ul class="social-list">
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.instagram.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://twitter.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.facebook.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use></svg
-                  ></a>
-                </li>
-                <li class="social-list-item">
-                  <a class="social-link" href="https://www.linkedin.com/"
-                    ><svg class="link-svg" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use></svg
-                  ></a>
-                </li>
-              </ul>
             </li>
           </ul>
         </div>
       </section>
+      <!-- #endregion our team -->
+      <!-- #region portfolio -->
       <section class="portfolio">
         <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
@@ -387,8 +398,9 @@
           </ul>
         </div>
       </section>
+      <!-- #endregion portfolio -->
     </main>
-
+    <!-- #region footer -->
     <footer class="page-footer">
       <div class="footer-container">
         <div class="logo-container">
@@ -405,25 +417,25 @@
           <ul class="social-list footer-social-list">
             <li class="social-list-item">
               <a class="footer-social-link" href="https://www.instagram.com/">
-                <svg class="link-svg" width="24" height="24">
+                <svg class="footer-link-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="social-list-item">
               <a class="footer-social-link" href="https://twitter.com/"
-                ><svg class="link-svg" width="24" height="24">
+                ><svg class="footer-link-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="social-list-item">
               <a class="footer-social-link" href="https://www.facebook.com/"
-                ><svg class="link-svg" width="24" height="24">
+                ><svg class="footer-link-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="social-list-item">
               <a class="footer-social-link" href="https://www.linkedin.com/">
-                <svg class="link-svg" width="24" height="24">
+                <svg class="footer-link-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
@@ -431,5 +443,6 @@
         </div>
       </div>
     </footer>
+    <!-- #endregion footer -->
   </body>
 </html>
