fix errors in header

--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
       </div>
     </header>
     <main>
+      <!-- #region hero -->
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
+      <!-- #endregion hero -->
+      <!-- #region benefits -->
       <section class="benefits">
         <div class="container benefits-container">
           <h2 class="visually-hidden">Benefits</h2>
@@ -116,6 +119,7 @@
           </ul>
         </div>
       </section>
+      <!-- #endregion benefits -->
       <!-- #region our team -->
       <section class="team">
         <div class="container team-container">
